Fixed the playing field with multipliers Fixed school penalty percentage not showing up Now using input type="number" instead of jquery spinning

--- a/src/server/src/main/webapp/css/backend.css
+++ b/src/server/src/main/webapp/css/backend.css
@@ -47,3 +47,8 @@ h2
 {
 	text-align: center;
 }
+
+input[type=number] 
+{ 
+	width: 45px;
+}
